infrastructure/controllers/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.2.160
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.bsdserver.nl`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-tls
